# nv-ingest-document-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/expected_output/: README.md
data/sample_pdfs/: README.md
docs/: CUSTOMIZATION.md  EXAMPLES.md  HARDWARE.md  SETUP.md  TROUBLESHOOTING.md
examples/: custom_converter_example.py
src/: __init__.py  benchmark.py  converter.py  extractor.py
tests/: __init__.py  test_benchmark.py  test_converter.py  test_coverage_gaps.py  test_extractor.py
